[package]
name = "zhurl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
description = "curl-like Zhihu API client with local Zhihu++ cookies"
repository = "https://github.com/zly2006/zhurl"
readme = "README.md"
keywords = ["zhihu", "cli", "api-client", "jq", "curl"]
categories = ["command-line-utilities", "web-programming::http-client"]

[dependencies]
jaq-all = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
zhihu_sign = "=0.1.0"
